fix weird safari flex wrap bug when relative widths are used

--- a/static/style.css
+++ b/static/style.css
@@ -42,7 +42,7 @@ body * {
   -ms-flex-shrink: 1;
   flex-grow: 1;
   flex-shrink: 1;
-  width: 20%;
+  width: 200px;
   min-width: 200px;
   padding: 10px;
   border: 1px solid #e5e5e5;
